workspace/compiler/tests/snapshots/test_snap_csharp__csharp_render_nullability_w80.snap
---
source: workspace/compiler/tests/snap_csharp.rs
assertion_line: 658
expression: rendered
---
// <unrendered module>

// ---

/// A name-value store that exercises the three nullability states:
/// fully-annotated nullable (`string?`), non-nullable (`string`),
/// and nullable value types (`int?` / `Nullable<int>`).
/// 
/// Declared: `class`
/// 
/// Declared: `internal`
internal class AnnotatedStore {
    public string Label { get; set; }
    public string? Description { get; set; }
    public Nullable<int> TimeoutSeconds { get; set; }
}

// ---

/// Returns the description, or a fallback when absent.
/// 
/// Declared: `public`
public string GetDescription(string fallback);

// ---

/// Tries to parse `input` as an integer.
/// 
/// Declared: `static`
/// 
/// Declared: `public`
public static bool TryParseInt(string? input, Nullable<int> result);

// ---

/// A class declared WITHOUT a `#nullable enable` banner.
/// Its reference-type members are in the oblivious nullability context
/// (neither annotated nullable nor annotated non-nullable).
/// The oracle records these as `nullable: "none"` (oblivious).
/// 
/// Declared: `class`
/// 
/// Declared: `internal`
internal class ObliviousStore {
    public string Tag { get; set; }
}

// ---

/// Oblivious string parameter and return value.
/// 
/// Declared: `public`
public string Echo(string tag);
